--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
@@ -17,6 +20,7 @@
     "html-to-image": "^1.11.13",
     "iztro": "^2.5.4",
     "lucide-react": "^0.556.0",
+    "lunar-typescript": "^1.8.6",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
